--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,23 +27,23 @@ jobs:
         path: ~/.nuget/packages
         key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
         restore-keys: |
-          ${{ runner.os }}-nuget-
+          ${{ runner.os }}-nuget-code
     - name: Build with dotnet
       run: dotnet build --configuration Release
 
     - name: Create Path        
-      run: sudo mkdir ${{env.DOTNET_ROOT}}/myapp
+      run: sudo mkdir ${{env.DOTNET_ROOT}}/myapp-code
     - name: Permission
-      run: sudo chmod -R 775 ${{env.DOTNET_ROOT}}/myapp
+      run: sudo chmod -R 775 ${{env.DOTNET_ROOT}}/myapp-code
       
     - name: dotnet publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp-code
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v4
       with:
-        name: .net-app
-        path: ${{env.DOTNET_ROOT}}/myapp
+        name: .net-app-code
+        path: ${{env.DOTNET_ROOT}}/myapp-code
       
   deploy:
     name: Deploy
@@ -53,14 +53,14 @@ jobs:
 
     steps:
       - name: Create Path        
-        run: sudo mkdir ${{env.DOTNET_ROOT}}/myapp
+        run: sudo mkdir ${{env.DOTNET_ROOT}}/myapp-code
       - name: Permission
-        run: sudo chmod -R 775 ${{env.DOTNET_ROOT}}/myapp
+        run: sudo chmod -R 775 ${{env.DOTNET_ROOT}}/myapp-code
         
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
+          name: .net-app-code
           #path: ${{env.DOTNET_ROOT}}/myapp
       - name: Deploy Github Pages
         uses: peaceiris/actions-gh-pages@v3
